plugins {
    id 'java'
}

group 'suic'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

sourceCompatibility = 15
targetCompatibility = 15

tasks.withType(JavaCompile).all {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}


dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'com.svetylkovo', name: 'rojo', version: '1.0.3'
    compileOnly 'org.projectlombok:lombok:1.18.16'
    annotationProcessor 'org.projectlombok:lombok:1.18.16'
    testCompileOnly 'org.projectlombok:lombok:1.18.16'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
    compile group: 'com.google.guava', name: 'guava', version: '30.0-jre'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.12.0'
    compile 'com.fasterxml.jackson.core:jackson-databind:2.12.0'
    implementation 'one.util:streamex:0.7.3'





}
